syntax = "proto3";
package pb;
option go_package = "pb";

// receiver group
message ReceiverGroup {
    string receiver_group_id = 1;
    string receiver_group_name = 2;
    string webhook = 3;
    bool webhook_enable = 4;
    string desc = 5;
    repeated Receiver receivers = 6;
}

message Receiver {
    string receiver_id = 1;
    string receiver_name = 2;
    string email = 3;
    string phone = 4;
    string wechat = 5;
}